[gd_scene load_steps=8 format=3 uid="uid://c5q8j55h24r8m"]

[ext_resource type="PackedScene" uid="uid://db48lbbsb7j1w" path="res://Ship/Tail.tscn" id="1"]
[ext_resource type="Script" path="res://Ship/Ship.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://b418d6fo6c6l4" path="res://Ship/ShipInfoWindow/ShipInfo.tscn" id="4"]
[ext_resource type="Script" path="res://Ship/Damage.gd" id="5"]
[ext_resource type="Script" path="res://Ship/AutoPilot.gd" id="6"]
[ext_resource type="Script" path="res://Ship/TragetComputer.gd" id="7"]
[ext_resource type="Script" path="res://Cargo/Inventory.gd" id="9"]

[node name="Ship" type="RigidBody3D" groups=["persist"]]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.587339)
input_ray_pickable = false
axis_lock_linear_y = true
axis_lock_angular_x = true
axis_lock_angular_z = true
mass = 30.0
continuous_cd = true
contact_monitor = true
freeze = true
angular_damp = 4.0
script = ExtResource("3")

[node name="Damage" type="Node" parent="."]
script = ExtResource("5")

[node name="AutoPilot" type="Node" parent="."]
script = ExtResource("6")

[node name="TragetComputer" type="Node" parent="."]
script = ExtResource("7")

[node name="Inventory" type="Node3D" parent="."]
script = ExtResource("9")

[node name="Tail" parent="." instance=ExtResource("1")]
frameOfReference_Node = NodePath("")

[node name="ShipInfo" parent="." instance=ExtResource("4")]
anchors_preset = 8
offset_left = -140.0
offset_top = -167.5
offset_right = 140.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="strongest_body_changed" from="." to="Tail" method="_on_reference_changed"]
